@@ -1,7 +1,6 @@
 package net.maku.subcontrol.controller;
 
 import cn.hutool.core.util.ObjectUtil;
-import com.alibaba.fastjson.JSONObject;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
@@ -11,15 +10,13 @@ import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
 import net.maku.followcom.convert.FollowTraderConvert;
 import net.maku.followcom.entity.*;
-import net.maku.followcom.enums.ConCodeEnum;
-import net.maku.followcom.enums.TraderStatusEnum;
-import net.maku.followcom.query.FollowOrderSendQuery;
-import net.maku.followcom.query.FollowOrderSpliListQuery;
-import net.maku.followcom.query.FollowTraderQuery;
+import net.maku.followcom.enums.*;
+import net.maku.followcom.query.*;
 import net.maku.followcom.service.*;
 import net.maku.followcom.util.FollowConstant;
 import net.maku.followcom.vo.*;
 import net.maku.framework.common.cache.RedisCache;
+import net.maku.framework.common.cache.RedisUtil;
 import net.maku.framework.common.constant.Constant;
 import net.maku.framework.common.exception.ServerException;
 import net.maku.framework.common.utils.PageResult;
@@ -27,36 +24,39 @@ import net.maku.framework.common.utils.Result;
 import net.maku.framework.common.utils.ThreadPoolUtils;
 import net.maku.framework.operatelog.annotations.OperateLog;
 import net.maku.framework.operatelog.enums.OperateTypeEnum;
-import net.maku.subcontrol.trader.LeaderApiTrader;
-import net.maku.subcontrol.trader.LeaderApiTradersAdmin;
-import net.maku.subcontrol.util.RestUtil;
+import net.maku.subcontrol.task.ObtainOrderHistoryTask;
+import net.maku.subcontrol.task.SpeedTestTask;
+import net.maku.subcontrol.trader.*;
+import net.maku.followcom.vo.FollowSendAccountListVO;
 import online.mtapi.mt4.Exception.ConnectException;
 import online.mtapi.mt4.Exception.InvalidSymbolException;
 import online.mtapi.mt4.Exception.TimeoutException;
 import online.mtapi.mt4.QuoteClient;
 import online.mtapi.mt4.QuoteEventArgs;
-import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springdoc.core.annotations.ParameterObject;
-import org.springframework.http.HttpMethod;
+import org.springframework.cache.Cache;
+import org.springframework.cache.CacheManager;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.util.ObjectUtils;
 import org.springframework.web.bind.annotation.*;
 
-import java.text.MessageFormat;
+import java.io.IOException;
+import java.math.BigDecimal;
 import java.util.*;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
- * mt4账号
+ * 策略账号
  *
  * @author 阿沐 babamu@126.com
  * <a href="https://maku.net">MAKU</a>
  */
 @RestController
 @RequestMapping("/subcontrol/trader")
-@Tag(name="mt4账号")
+@Tag(name = "mt4账号")
 @AllArgsConstructor
 public class FollowTraderController {
     private static final Logger log = LoggerFactory.getLogger(FollowTraderController.class);
@@ -69,11 +69,18 @@ public class FollowTraderController {
     private final FollowOrderDetailService detailService;
     private final FollowBrokeServerService followBrokeServerService;
     private final FollowVarietyService followVarietyService;
-
+    private final FollowOrderCloseService followOrderCloseService;
+    private final CopierApiTradersAdmin copierApiTradersAdmin;
+    private final FollowTraderSubscribeService followTraderSubscribeService;
+    private final FollowVpsService followVpsService;
+    private final CacheManager cacheManager;
+    private final SpeedTestTask speedTestTask;
+    private final RedisUtil redisUtil;
+    private final ObtainOrderHistoryTask obtainOrderHistoryTask;
     @GetMapping("page")
     @Operation(summary = "分页")
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public Result<PageResult<FollowTraderVO>> page(@ParameterObject @Valid FollowTraderQuery query){
+    public Result<PageResult<FollowTraderVO>> page(@ParameterObject @Valid FollowTraderQuery query) {
         query.setServerIp(FollowConstant.LOCAL_HOST);
         PageResult<FollowTraderVO> page = followTraderService.page(query);
         return Result.ok(page);
@@ -83,7 +90,7 @@ public class FollowTraderController {
     @GetMapping("{id}")
     @Operation(summary = "信息")
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public Result<FollowTraderVO> get(@PathVariable("id") Long id){
+    public Result<FollowTraderVO> get(@PathVariable("id") Long id) {
         FollowTraderVO data = followTraderService.get(id);
 
         return Result.ok(data);
@@ -93,51 +100,66 @@ public class FollowTraderController {
     @Operation(summary = "保存")
     @OperateLog(type = OperateTypeEnum.INSERT)
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public Result<String> save(@RequestBody FollowTraderVO vo){
-        String serverIp = FollowConstant.LOCAL_HOST;
-        log.info("localhost{}",serverIp);
-        vo.setServerIp(serverIp);
-        if (ObjectUtil.isEmpty(vo.getPlatform())){
-            throw new ServerException("服务商错误");
-        }
-        List<FollowBrokeServerEntity> serverEntityList = followBrokeServerService.listByServerName(vo.getPlatform());
-        if (ObjectUtil.isEmpty(serverEntityList)){
-            throw new ServerException("暂无可用服务器商");
-        }
-        //查看是否已存在该账号
-        FollowTraderEntity followTraderEntity = followTraderService.getOne(new LambdaQueryWrapper<FollowTraderEntity>().eq(FollowTraderEntity::getAccount, vo.getAccount()).eq(FollowTraderEntity::getPlatform, vo.getPlatform()).eq(FollowTraderEntity::getIpAddr,serverIp));
-        if (ObjectUtil.isNotEmpty(followTraderEntity)){
-            throw new ServerException("该账号已存在");
+    public Result<String> save(@RequestBody @Valid FollowTraderVO vo) {
+        //默认模板最新的模板id
+        long newId=0;
+        if (ObjectUtil.isEmpty(vo.getTemplateId())) {
+            vo.setTemplateId(followVarietyService.getBeginTemplateId());
         }
         //本机处理
         try {
             FollowTraderVO followTraderVO = followTraderService.save(vo);
-            FollowTraderEntity convert = FollowTraderConvert.INSTANCE.convert(vo);
+            newId=followTraderVO.getId();
+            FollowTraderEntity convert = FollowTraderConvert.INSTANCE.convert(followTraderVO);
             convert.setId(followTraderVO.getId());
-            ConCodeEnum conCodeEnum = leaderApiTradersAdmin.addTrader(convert);
-            if (!conCodeEnum.equals(ConCodeEnum.SUCCESS)){
+            ConCodeEnum conCodeEnum = leaderApiTradersAdmin.addTrader(followTraderService.getById(followTraderVO.getId()));
+            if (!conCodeEnum.equals(ConCodeEnum.SUCCESS)) {
                 followTraderService.removeById(followTraderVO.getId());
-                return Result.error();
+                return Result.error("账号无法连接");
             }
-            ThreadPoolUtils.execute(()->{
+            LeaderApiTrader leaderApiTrader1 = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+            leaderApiTrader1.startTrade();
+            //添加订单数据
+            List<FollowTraderEntity> newList = new ArrayList<>();
+            convert.setIsFirstSync(1);
+            obtainOrderHistoryTask.update(convert,newList);
+            ThreadPoolUtils.execute(() -> {
                 LeaderApiTrader leaderApiTrader = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+                leaderApiTradersAdmin.pushRedisData(followTraderVO,leaderApiTrader.quoteClient);
                 leaderApiTrader.startTrade();
-                followTraderService.saveQuo(leaderApiTrader.quoteClient,convert);
+                followTraderService.saveQuo(leaderApiTrader.quoteClient, convert);
             });
-        }catch (Exception e){
-            log.error("保存失败"+e);
+        } catch (Exception e) {
+            followTraderService.removeById(newId);
+            log.error("保存失败" + e);
+            if (e instanceof ServerException) {
+                throw e;
+            } else {
+                throw new ServerException(e.getMessage());
+            }
         }
-
         return Result.ok();
     }
+
 
     @PutMapping
     @Operation(summary = "修改")
     @OperateLog(type = OperateTypeEnum.UPDATE)
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public Result<String> update(@RequestBody @Valid FollowTraderVO vo){
+    public Result<String> update(@RequestBody @Valid FollowTraderVO vo) {
+        FollowTraderVO old = followTraderService.get(vo.getId());
+        if (ObjectUtil.isEmpty(vo.getTemplateId())) {
+            vo.setTemplateId(followVarietyService.getBeginTemplateId());
+        }
         followTraderService.update(vo);
-
+        //重连
+        if(ObjectUtil.isNotEmpty(vo.getPassword()) && !old.getPassword().equals(vo.getPassword())){
+            reconnect(vo.getId().toString());
+        }
+        Boolean reconnect = reconnect(vo.getId().toString());
+        if (!reconnect){
+            throw new ServerException("账号信息有误，登录失败！");
+        }
         return Result.ok();
     }
 
@@ -145,13 +167,85 @@ public class FollowTraderController {
     @Operation(summary = "删除")
     @OperateLog(type = OperateTypeEnum.DELETE)
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public Result<String> delete(@RequestBody List<Long> idList){
+    public Result<String> delete(@RequestBody List<Long> idList) {
+        List<FollowTraderEntity> list = followTraderService.list(new LambdaQueryWrapper<FollowTraderEntity>().in(FollowTraderEntity::getId, idList));
+        List<FollowTraderEntity> masterList = list.stream().filter(o -> o.getType().equals(TraderTypeEnum.MASTER_REAL.getType())).toList();
+        List<FollowTraderEntity> slaveList = list.stream().filter(o -> o.getType().equals(TraderTypeEnum.SLAVE_REAL.getType())).toList();
+        if (ObjectUtil.isNotEmpty(masterList)) {
+            //查看喊单账号是否存在用户
+            List<FollowTraderSubscribeEntity> followTraderSubscribeEntityList = followTraderSubscribeService.list(new LambdaQueryWrapper<FollowTraderSubscribeEntity>().in(FollowTraderSubscribeEntity::getMasterId, masterList.stream().map(FollowTraderEntity::getId).toList()));
+            if (ObjectUtil.isNotEmpty(followTraderSubscribeEntityList)) {
+                throw new ServerException("请先删除跟单用户");
+            }
+        }
         followTraderService.delete(idList);
-        //清空缓存
-        idList.stream().forEach(o-> leaderApiTradersAdmin.removeTrader(o.toString()));
+         //清空缓存
+        list.stream().forEach(o ->{
+            leaderApiTradersAdmin.removeTrader(o.getId().toString());
+            copierApiTradersAdmin.removeTrader(o.getId().toString());
+            redisCache.deleteByPattern(o.getId().toString());
+            //账号缓存移除
+            Cache cache = cacheManager.getCache("followFollowCache");
+            if (cache != null) {
+                cache.evict(o); // 移除指定缓存条目
+            }
+        });
+
+        slaveList.forEach(o->{
+            //删除订阅关系
+            List<FollowTraderSubscribeEntity> followTraderSubscribeEntities = followTraderSubscribeService.list(new LambdaQueryWrapper<FollowTraderSubscribeEntity>().eq(FollowTraderSubscribeEntity::getSlaveId, o.getId()));
+            followTraderSubscribeService.remove(new LambdaQueryWrapper<FollowTraderSubscribeEntity>().eq(FollowTraderSubscribeEntity::getSlaveId, o.getId()));
+
+            //跟单关系缓存删除
+            followTraderSubscribeEntities.forEach(o1->{
+                redisUtil.hDel(Constant.REPAIR_SEND+o1.getMasterAccount()+":"+o1.getMasterId(),o1.getSlaveAccount().toString());
+                redisUtil.hDel(Constant.REPAIR_CLOSE+o1.getMasterAccount()+":"+o1.getMasterId(),o1.getSlaveAccount().toString());
+                FollowTraderEntity master = followTraderService.getFollowById(o1.getMasterId());
+                //删除跟单漏单缓存
+                redisCache.delete(Constant.FOLLOW_REPAIR_SEND + FollowConstant.LOCAL_HOST + "#"+master.getPlatform()+"#"+o.getPlatform()+"#"+o1.getSlaveAccount() + "#" + o1.getMasterAccount());
+                redisCache.delete(Constant.FOLLOW_REPAIR_CLOSE + FollowConstant.LOCAL_HOST+ "#"+master.getPlatform()+"#"+o.getPlatform()+"#" +o1.getSlaveAccount() + "#" + o1.getMasterAccount());
+                String cacheKey = generateCacheKey(o1.getSlaveId(), o1.getMasterId());
+                Cache cache = cacheManager.getCache("followSubscriptionCache");
+                if (cache != null) {
+                    cache.evict(cacheKey); // 移除指定缓存条目
+                }
+
+                //删除跟单对应主账号缓存
+                Cache cache1 = cacheManager.getCache("followSubOrderCache");
+                if (cache1 != null) {
+                    cache1.evict(o1.getMasterId()); // 移除指定缓存条目
+                }
+
+                Cache cache3= cacheManager.getCache("followSubTraderCache");
+                if (cache3 != null) {
+                    cache3.evict(o1.getSlaveId()); // 移除指定缓存条目
+                }
+                followTraderService.removeRelation(o,o1.getMasterAccount(),master.getPlatformId());
+            });
+        });
+
+        //删除订阅关系
+        followTraderSubscribeService.remove(new LambdaQueryWrapper<FollowTraderSubscribeEntity>().in(FollowTraderSubscribeEntity::getMasterId,idList));
+
+        masterList.forEach(o->{
+            //喊单关系缓存移除
+            Cache cache = cacheManager.getCache("followSubOrderCache");
+            if (cache != null) {
+                cache.evict(o.getId()); // 移除指定缓存条目
+            }
+        });
+
         return Result.ok();
     }
 
+
+    private String generateCacheKey(Long slaveId, Long masterId) {
+        if (slaveId != null && masterId != null) {
+            return slaveId + "_" + masterId;
+        } else {
+            return "defaultKey";
+        }
+    }
 
     @GetMapping("export")
     @Operation(summary = "导出")
@@ -164,14 +258,14 @@ public class FollowTraderController {
     @GetMapping("listSymbol/{id}")
     @Operation(summary = "账号品种列表")
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public Result<List<FollowSysmbolSpecificationEntity> > listSymbol(@PathVariable("id") Long traderId){
+    public Result<List<FollowSysmbolSpecificationEntity>> listSymbol(@PathVariable("id") Long traderId) {
         List<FollowSysmbolSpecificationEntity> followSysmbolSpecificationEntityList;
-        if (ObjectUtil.isNotEmpty(redisCache.get(Constant.SYMBOL_SPECIFICATION + traderId))){
-            followSysmbolSpecificationEntityList = (List<FollowSysmbolSpecificationEntity>)redisCache.get(Constant.SYMBOL_SPECIFICATION + traderId);
-        }else {
+        if (ObjectUtil.isNotEmpty(redisCache.get(Constant.SYMBOL_SPECIFICATION + traderId))) {
+            followSysmbolSpecificationEntityList = (List<FollowSysmbolSpecificationEntity>) redisCache.get(Constant.SYMBOL_SPECIFICATION + traderId);
+        } else {
             //查询改账号的品种规格
             followSysmbolSpecificationEntityList = followSysmbolSpecificationService.list(new LambdaQueryWrapper<FollowSysmbolSpecificationEntity>().eq(FollowSysmbolSpecificationEntity::getTraderId, traderId));
-            redisCache.set(Constant.SYMBOL_SPECIFICATION+traderId,followSysmbolSpecificationEntityList);
+            redisCache.set(Constant.SYMBOL_SPECIFICATION + traderId, followSysmbolSpecificationEntityList);
         }
         return Result.ok(followSysmbolSpecificationEntityList);
     }
@@ -179,58 +273,135 @@ public class FollowTraderController {
     @GetMapping("listOrderSymbol")
     @Operation(summary = "订单品种列表")
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public Result<List<String> > listSymbol(){
-        List<String> collect = detailService.list().stream().map(FollowOrderDetailEntity::getSymbol).distinct().collect(Collectors.toList());
-        return Result.ok(collect);
+    public Result<List<String>> listSymbol() {
+        List<FollowOrderSendEntity> collect = followOrderSendService.list(new LambdaQueryWrapper<FollowOrderSendEntity>().select(FollowOrderSendEntity::getSymbol).eq(FollowOrderSendEntity::getIpAddr,FollowConstant.LOCAL_HOST)).stream().distinct().toList();
+        return Result.ok(collect.stream().map(FollowOrderSendEntity::getSymbol).toList());
     }
 
     @PostMapping("orderSend")
     @Operation(summary = "下单")
+    @OperateLog(type = OperateTypeEnum.INSERT)
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public Result<?> orderSend(@RequestBody FollowOrderSendVO vo) {
-        // 本地处理逻辑
-        FollowTraderVO followTraderVO = followTraderService.get(vo.getTraderId());
+    public Result<?> orderSend(@RequestBody @Valid FollowOrderSendVO vo) {
+        FollowTraderEntity followTraderVO = followTraderService.getById(vo.getTraderId());
         if (ObjectUtil.isEmpty(followTraderVO)) {
             return Result.error("账号不存在");
         }
-
-        LeaderApiTrader leaderApiTrader = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap()
-                .get(vo.getTraderId().toString());
-        QuoteClient quoteClient = null;
-
-        if (ObjectUtil.isEmpty(leaderApiTrader) || ObjectUtil.isEmpty(leaderApiTrader.quoteClient)
-                || !leaderApiTrader.quoteClient.Connected()) {
-            quoteClient = followPlatformService.tologin(
-                    followTraderVO.getAccount(),
-                    followTraderVO.getPassword(),
-                    followTraderVO.getPlatform()
-            );
-            if (ObjectUtil.isEmpty(quoteClient)) {
-                return Result.error("账号无法登录");
-            }
-        } else {
-            quoteClient = leaderApiTrader.quoteClient;
+        if (vo.getStartSize().compareTo(vo.getEndSize())>0) {
+            return Result.error("开始手数不能大于结束手数");
         }
 
-        Integer contract = followVarietyService.list(
-                        new LambdaQueryWrapper<FollowVarietyEntity>()
-                                .eq(FollowVarietyEntity::getStdSymbol, vo.getSymbol()))
-                .stream().filter(o->ObjectUtil.isNotEmpty(o.getStdSymbol())).findFirst()
+
+        QuoteClient quoteClient = null;
+        AbstractApiTrader abstractApiTrader = null;
+        //检查vps是否正常
+        FollowVpsEntity followVpsEntity = followVpsService.getById(followTraderVO.getServerId());
+        if (  followVpsEntity.getIsOpen().equals(CloseOrOpenEnum.CLOSE.getValue()) || followVpsEntity.getConnectionStatus().equals(CloseOrOpenEnum.CLOSE.getValue())) {
+            throw new ServerException("VPS服务异常，请检查");
+        }
+
+        if (followTraderVO.getType().equals(TraderTypeEnum.MASTER_REAL.getType())){
+            abstractApiTrader = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap()
+                    .get(vo.getTraderId().toString());
+
+            if (ObjectUtil.isEmpty(abstractApiTrader) || ObjectUtil.isEmpty(abstractApiTrader.quoteClient)
+                    || !abstractApiTrader.quoteClient.Connected()) {
+                leaderApiTradersAdmin.removeTrader(vo.getTraderId().toString());
+                ConCodeEnum conCodeEnum = leaderApiTradersAdmin.addTrader(followTraderVO);
+                if (conCodeEnum == ConCodeEnum.SUCCESS) {
+                    quoteClient = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(vo.getTraderId().toString()).quoteClient;
+                    LeaderApiTrader leaderApiTrader1 = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+                    leaderApiTrader1.startTrade();
+                }else if (conCodeEnum == ConCodeEnum.AGAIN){
+                    long maxWaitTimeMillis = 10000; // 最多等待10秒
+                    long startTime = System.currentTimeMillis();
+                    LeaderApiTrader leaderApiTrader = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+                    // 开始等待直到获取到copierApiTrader1
+                    while (leaderApiTrader == null && (System.currentTimeMillis() - startTime) < maxWaitTimeMillis) {
+                        try {
+                            // 每次自旋等待500ms后再检查
+                            Thread.sleep(500);
+                        } catch (InterruptedException e) {
+                            // 处理中断
+                            Thread.currentThread().interrupt();
+                            break;
+                        }
+                        leaderApiTrader = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+                    }
+                    //重复提交
+                    if (ObjectUtil.isNotEmpty(leaderApiTrader)){
+                        log.info(followTraderVO.getId().toString()+"重复提交并等待完成");
+                        quoteClient = leaderApiTrader.quoteClient;
+                    }else {
+                        log.info(followTraderVO.getId()+"重复提交并等待失败");
+                    }
+                }else {
+                    return Result.error("账号无法登录");
+                }
+            } else {
+                quoteClient = abstractApiTrader.quoteClient;
+            }
+        }else {
+            abstractApiTrader = copierApiTradersAdmin.getCopier4ApiTraderConcurrentHashMap()
+                    .get(vo.getTraderId().toString());
+            if (ObjectUtil.isEmpty(abstractApiTrader) || ObjectUtil.isEmpty(abstractApiTrader.quoteClient)
+                    || !abstractApiTrader.quoteClient.Connected()) {
+                copierApiTradersAdmin.removeTrader(vo.getTraderId().toString());
+                ConCodeEnum conCodeEnum = copierApiTradersAdmin.addTrader(followTraderVO);
+                if (conCodeEnum == ConCodeEnum.SUCCESS) {
+                    quoteClient = copierApiTradersAdmin.getCopier4ApiTraderConcurrentHashMap().get(vo.getTraderId().toString()).quoteClient;
+                    CopierApiTrader copierApiTrader = copierApiTradersAdmin.getCopier4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+                    copierApiTrader.startTrade();
+                }else if (conCodeEnum == ConCodeEnum.AGAIN){
+                    long maxWaitTimeMillis = 10000; // 最多等待10秒
+                    long startTime = System.currentTimeMillis();
+                    CopierApiTrader copierApiTrader = copierApiTradersAdmin.getCopier4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+                    // 开始等待直到获取到copierApiTrader1
+                    while (copierApiTrader == null && (System.currentTimeMillis() - startTime) < maxWaitTimeMillis) {
+                        try {
+                            // 每次自旋等待500ms后再检查
+                            Thread.sleep(500);
+                        } catch (InterruptedException e) {
+                            // 处理中断
+                            Thread.currentThread().interrupt();
+                            break;
+                        }
+                        copierApiTrader = copierApiTradersAdmin.getCopier4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+                    }
+                    //重复提交
+                    if (ObjectUtil.isNotEmpty(copierApiTrader)){
+                        log.info(followTraderVO.getId()+"重复提交并等待完成");
+                        quoteClient = copierApiTrader.quoteClient;
+                    }else {
+                        log.info(followTraderVO.getId()+"重复提交并等待失败");
+                    }
+                }else {
+                    return Result.error("账号无法登录");
+                }
+            } else {
+                quoteClient = abstractApiTrader.quoteClient;
+            }
+
+        }
+
+        // 查看品种匹配 模板
+        List<FollowVarietyEntity> followVarietyEntityList = followVarietyService.getListByTemplated(abstractApiTrader.getTrader().getTemplateId());
+        Integer contract = followVarietyEntityList.stream().filter(o -> ObjectUtil.isNotEmpty(o.getStdSymbol()) && o.getStdSymbol().equals(vo.getSymbol())).findFirst()
                 .map(FollowVarietyEntity::getStdContract)
                 .orElse(0);
 
-        String symbol1 = getSymbol(vo.getTraderId(), vo.getSymbol());
+        String symbol1 = getSymbol(quoteClient,vo.getTraderId(), vo.getSymbol());
         vo.setSymbol(symbol1);
-        log.info("标准合约大小{}",contract);
+        log.info("标准合约大小{}", contract);
         try {
             double ask = getQuoteOrRetry(quoteClient, vo.getSymbol());
         } catch (InvalidSymbolException | TimeoutException | ConnectException e) {
-            return Result.error(vo.getAccount() + " 获取报价失败, 品种不正确, 请先配置品种");
+            return Result.error(followTraderVO.getAccount() + " 获取报价失败, 品种不正确, 请先配置品种");
         } catch (InterruptedException e) {
-            return Result.error(vo.getAccount() + " 操作被中断");
+            return Result.error(followTraderVO.getAccount() + " 操作被中断");
         }
 
-        boolean result = followTraderService.orderSend(vo, quoteClient, followTraderVO, contract);
+        boolean result = followTraderService.orderSend(vo, quoteClient, FollowTraderConvert.INSTANCE.convert(followTraderVO), contract);
         if (!result) {
             return Result.error(followTraderVO.getAccount() + "下单失败,该账号正在下单中");
         }
@@ -242,19 +413,13 @@ public class FollowTraderController {
     @PreAuthorize("hasAuthority('mascontrol:trader')")
     public Result<PageResult<FollowOrderSendVO>> orderSendList(@ParameterObject @Valid FollowOrderSendQuery query) {
         PageResult<FollowOrderSendVO> page = followOrderSendService.page(query);
-        page.getList().stream().forEach(o-> {
-            FollowTraderEntity followTraderEntity = followTraderService.getOne(new LambdaQueryWrapper<FollowTraderEntity>().eq(FollowTraderEntity::getId, o.getTraderId()));
-            o.setPlatform(followTraderEntity.getPlatform());
-            FollowPlatformEntity followPlatform = followPlatformService.getById(followTraderEntity.getPlatformId());
-            o.setBrokeName(followPlatform.getBrokerName());
-        });
-        return  Result.ok(page);
+        return Result.ok(page);
     }
 
     @GetMapping("orderSlipPoint")
     @Operation(summary = "滑点分析列表")
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public  Result<PageResult<FollowOrderSlipPointVO>>  orderSlipPoint(@ParameterObject @Valid FollowOrderSpliListQuery query) {
+    public Result<PageResult<FollowOrderSlipPointVO>> orderSlipPoint(@ParameterObject @Valid FollowOrderSpliListQuery query) {
 
         if (ObjectUtil.isNotEmpty(query.getSymbol())) {
             query.setSymbolList(Arrays.asList(query.getSymbol().split(",")));
@@ -263,8 +428,8 @@ public class FollowTraderController {
             query.setTraderIdList(Arrays.asList(query.getTraderId().split(",")));
         }
         PageResult<FollowOrderSlipPointVO> followOrderSlipPointVOPageResult = followTraderService.pageSlipPoint(query);
-        Integer total = followOrderSlipPointVOPageResult.getList().stream().mapToInt(FollowOrderSlipPointVO::getSymbolNum).sum();;
-        followOrderSlipPointVOPageResult.getList().stream().forEach(o->o.setTotalNum(total));
+        Integer total = followOrderSlipPointVOPageResult.getList().stream().mapToInt(FollowOrderSlipPointVO::getSymbolNum).sum();
+        followOrderSlipPointVOPageResult.getList().stream().forEach(o -> o.setTotalNum(total));
         List<FollowOrderSlipPointVO> collect = followOrderSlipPointVOPageResult.getList().stream().sorted(Comparator.comparing(FollowOrderSlipPointVO::getTraderId)).collect(Collectors.toList());
         followOrderSlipPointVOPageResult.setList(collect);
         return Result.ok(followOrderSlipPointVOPageResult);
@@ -273,54 +438,131 @@ public class FollowTraderController {
     @GetMapping("orderSlipDetail")
     @Operation(summary = "订单详情")
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public Result<PageResult<FollowOrderDetailVO>>  orderSlipDetail(@ParameterObject @Valid FollowOrderSendQuery query) {
-
+    public Result<PageResult<FollowOrderDetailVO>> orderSlipDetail(@ParameterObject @Valid FollowOrderSendQuery query) {
         PageResult<FollowOrderDetailVO> followOrderDetailVOPageResult = followTraderService.orderSlipDetail(query);
-        return  Result.ok(followOrderDetailVOPageResult);
+        return Result.ok(followOrderDetailVOPageResult);
     }
 
     @GetMapping("orderDoing/{traderId}")
     @Operation(summary = "正在进行订单详情")
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public Result<FollowOrderSendEntity>  orderDoing(@PathVariable("traderId") Long traderId) {
-        return  Result.ok(followTraderService.orderDoing(traderId));
+    public Result<FollowOrderSendEntity> orderDoing(@PathVariable("traderId") Long traderId) {
+        return Result.ok(followTraderService.orderDoing(traderId));
     }
 
     @PostMapping("orderClose")
     @Operation(summary = "平仓")
+    @OperateLog(type = OperateTypeEnum.INSERT)
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public Result<Boolean> orderClose(@RequestBody FollowOrderCloseVO vo){
-        FollowTraderVO followTraderVO = followTraderService.get(vo.getTraderId());
-        if (ObjectUtil.isEmpty(followTraderVO)){
+    public Result<Boolean> orderClose(@RequestBody @Valid FollowOrderSendCloseVO vo) {
+        if(vo.getIsCloseAll() ==null || vo.getIsCloseAll()== TraderRepairEnum.SEND.getType()){
+            checkParams(vo);
+        }
+        FollowTraderEntity followTraderVO = followTraderService.getById(vo.getTraderId());
+        if (ObjectUtil.isEmpty(followTraderVO)) {
             throw new ServerException("账号不存在");
         }
-
-        LeaderApiTrader leaderApiTrader = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(vo.getTraderId().toString());
+        //检查vps是否正常
+        FollowVpsEntity followVpsEntity = followVpsService.getById(followTraderVO.getServerId());
+        if (followVpsEntity.getIsOpen().equals(CloseOrOpenEnum.CLOSE.getValue()) || followVpsEntity.getConnectionStatus().equals(CloseOrOpenEnum.CLOSE.getValue())) {
+            throw new ServerException("VPS服务异常，请检查");
+        }
+        AbstractApiTrader abstractApiTrader;
         QuoteClient quoteClient = null;
-        if (ObjectUtil.isEmpty(leaderApiTrader)||ObjectUtil.isEmpty(leaderApiTrader.quoteClient)||!leaderApiTrader.quoteClient.Connected()){
-            quoteClient = followPlatformService.tologin(followTraderVO.getAccount(), followTraderVO.getPassword(), followTraderVO.getPlatform());
-            if (ObjectUtil.isEmpty(quoteClient)){
-                throw new ServerException("账号无法登录");
+        if (followTraderVO.getType().equals(TraderTypeEnum.MASTER_REAL.getType())){
+            abstractApiTrader = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(vo.getTraderId().toString());
+            if (ObjectUtil.isEmpty(abstractApiTrader) || ObjectUtil.isEmpty(abstractApiTrader.quoteClient) || !abstractApiTrader.quoteClient.Connected()) {
+                leaderApiTradersAdmin.removeTrader(vo.getTraderId().toString());
+                ConCodeEnum conCodeEnum = leaderApiTradersAdmin.addTrader(followTraderVO);
+                if (conCodeEnum == ConCodeEnum.SUCCESS ) {
+                    quoteClient=leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(vo.getTraderId().toString()).quoteClient;
+                    LeaderApiTrader leaderApiTrader1 = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+                    leaderApiTrader1.startTrade();
+                }else if (conCodeEnum == ConCodeEnum.AGAIN){
+                    long maxWaitTimeMillis = 10000; // 最多等待10秒
+                    long startTime = System.currentTimeMillis();
+                    LeaderApiTrader leaderApiTrader = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+                    // 开始等待直到获取到copierApiTrader1
+                    while (leaderApiTrader == null && (System.currentTimeMillis() - startTime) < maxWaitTimeMillis) {
+                        try {
+                            // 每次自旋等待500ms后再检查
+                            Thread.sleep(500);
+                        } catch (InterruptedException e) {
+                            // 处理中断
+                            Thread.currentThread().interrupt();
+                            break;
+                        }
+                        leaderApiTrader = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+                    }
+                    //重复提交
+                    if (ObjectUtil.isNotEmpty(leaderApiTrader)){
+                        log.info(followTraderVO.getId().toString()+"重复提交并等待完成");
+                        quoteClient = leaderApiTrader.quoteClient;
+                    }else {
+                        log.info(followTraderVO.getId()+"重复提交并等待失败");
+                    }
+                }
+            } else {
+                quoteClient = abstractApiTrader.quoteClient;
             }
         }else {
-            quoteClient=leaderApiTrader.quoteClient;
+            abstractApiTrader = copierApiTradersAdmin.getCopier4ApiTraderConcurrentHashMap().get(vo.getTraderId().toString());
+            if (ObjectUtil.isEmpty(abstractApiTrader) || ObjectUtil.isEmpty(abstractApiTrader.quoteClient) || !abstractApiTrader.quoteClient.Connected()) {
+                copierApiTradersAdmin.removeTrader(followTraderVO.getId().toString());
+                ConCodeEnum conCodeEnum = copierApiTradersAdmin.addTrader(followTraderVO);
+                if (conCodeEnum == ConCodeEnum.SUCCESS) {
+                    quoteClient=copierApiTradersAdmin.getCopier4ApiTraderConcurrentHashMap().get(vo.getTraderId().toString()).quoteClient;
+                    CopierApiTrader copierApiTrader1 = copierApiTradersAdmin.getCopier4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+                    copierApiTrader1.setTrader(followTraderVO);
+                    copierApiTrader1.startTrade();
+                }else if (conCodeEnum == ConCodeEnum.AGAIN){
+                    long maxWaitTimeMillis = 10000; // 最多等待10秒
+                    long startTime = System.currentTimeMillis();
+                    CopierApiTrader copierApiTrader = copierApiTradersAdmin.getCopier4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+                    // 开始等待直到获取到copierApiTrader1
+                    while (copierApiTrader == null && (System.currentTimeMillis() - startTime) < maxWaitTimeMillis) {
+                        try {
+                            // 每次自旋等待500ms后再检查
+                            Thread.sleep(500);
+                        } catch (InterruptedException e) {
+                            // 处理中断
+                            Thread.currentThread().interrupt();
+                            break;
+                        }
+                        copierApiTrader = copierApiTradersAdmin.getCopier4ApiTraderConcurrentHashMap().get(followTraderVO.getId().toString());
+                    }
+                    //重复提交
+                    if (ObjectUtil.isNotEmpty(copierApiTrader)){
+                        log.info(followTraderVO.getId()+"重复提交并等待完成");
+                        quoteClient = copierApiTrader.quoteClient;
+                    }else {
+                        log.info(followTraderVO.getId()+"重复提交并等待失败");
+                    }
+                }
+            } else {
+                quoteClient = abstractApiTrader.quoteClient;
+            }
+        }
+        //获取vps数据
+        if (ObjectUtil.isEmpty(quoteClient)){
+            throw new ServerException(vo.getAccount()+"登录异常");
         }
 
-        if (ObjectUtil.isNotEmpty(vo.getSymbol())){
-            String symbol1 = getSymbol(vo.getTraderId(), vo.getSymbol());
+        if (ObjectUtil.isNotEmpty(vo.getSymbol())) {
+            String symbol1 = getSymbol(quoteClient,vo.getTraderId(), vo.getSymbol());
             vo.setSymbol(symbol1);
             try {
                 // 获取报价信息
-                double ask = getQuoteOrRetry(quoteClient,vo.getSymbol());
+                double ask = getQuoteOrRetry(quoteClient, vo.getSymbol());
             } catch (InvalidSymbolException | TimeoutException | ConnectException e) {
                 throw new ServerException(vo.getAccount() + " 获取报价失败, 品种不正确, 请先配置品种", e);
             } catch (InterruptedException e) {
                 throw new ServerException(vo.getAccount() + " 操作被中断", e);
             }
         }
-        boolean result = followTraderService.orderClose(vo,quoteClient);
-        if (!result){
-            return Result.error(followTraderVO.getAccount()+"正在平仓,请稍后再试");
+        boolean result = followTraderService.orderClose(vo, quoteClient);
+        if (!result) {
+            return Result.error(followTraderVO.getAccount() + "正在平仓,请稍后再试");
         }
         return Result.ok(true);
     }
@@ -328,9 +570,9 @@ public class FollowTraderController {
     @GetMapping("traderOverview")
     @Operation(summary = "数据概览")
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public Result<TraderOverviewVO>  traderOverview(HttpServletRequest request) {
-        String serverIp = (String) request.getAttribute("serverIp");
-        return  Result.ok(followTraderService.traderOverview(serverIp));
+    public Result<TraderOverviewVO> traderOverview(HttpServletRequest request) {
+        String serverIp = FollowConstant.LOCAL_HOST;
+        return Result.ok(followTraderService.traderOverview(serverIp));
     }
 
 
@@ -338,53 +580,52 @@ public class FollowTraderController {
     @Operation(summary = "导出订单")
     @OperateLog(type = OperateTypeEnum.EXPORT)
     @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public void exportOrderDetail(@ParameterObject @Valid FollowOrderSendQuery query) {
+    public Result<Object> exportOrderDetail(@ParameterObject @Valid FollowOrderSendQuery query) {
         //设置查询数量最高100000条
         query.setPage(1);
         query.setLimit(100000);
         //处理平台查询逻辑，找出相关账号查询
-        List<Long> collectPlat=new ArrayList<>() ;
-        List<Long> collectBroke=new ArrayList<>() ;
+        List<Long> collectPlat = new ArrayList<>();
+        List<Long> collectBroke = new ArrayList<>();
         //处理券商查询逻辑，找出相关账号查询
-        if (ObjectUtil.isNotEmpty(query.getBrokeName())){
+        if (ObjectUtil.isNotEmpty(query.getBrokeName())) {
             List<FollowBrokeServerEntity> serverEntityList = followBrokeServerService.listByServerName(query.getBrokeName());
-            if (ObjectUtil.isNotEmpty(serverEntityList)){
+            if (ObjectUtil.isNotEmpty(serverEntityList)) {
                 List<FollowTraderEntity> list = followTraderService.list(new LambdaQueryWrapper<FollowTraderEntity>().in(FollowTraderEntity::getPlatform, serverEntityList.stream().map(FollowBrokeServerEntity::getServerName).collect(Collectors.toList())));
                 collectBroke = list.stream().map(entity -> entity.getId()).collect(Collectors.toList());
             }
         }
-        if (ObjectUtil.isNotEmpty(query.getPlatform())){
+        if (ObjectUtil.isNotEmpty(query.getPlatform())) {
             List<FollowTraderEntity> list = followTraderService.list(new LambdaQueryWrapper<FollowTraderEntity>().eq(FollowTraderEntity::getPlatform, query.getPlatform()));
             collectPlat = list.stream().map(entity -> entity.getId()).collect(Collectors.toList());
         }
         // 计算交集
         if (ObjectUtil.isNotEmpty(collectPlat) && ObjectUtil.isNotEmpty(collectBroke)) {
             collectPlat.retainAll(collectBroke); // collectPlat 会变成 collectPlat 和 collectBroke 的交集
-        }else  if (ObjectUtil.isEmpty(collectPlat) && ObjectUtil.isNotEmpty(collectBroke)) {
-            collectPlat=collectBroke;
+        } else if (ObjectUtil.isEmpty(collectPlat) && ObjectUtil.isNotEmpty(collectBroke)) {
+            collectPlat = collectBroke;
         }
-        if (ObjectUtil.isNotEmpty(collectPlat)){
+        if (ObjectUtil.isNotEmpty(collectPlat)) {
             query.setTraderIdList(collectPlat);
         }
 
+//        if (ObjectUtil.isEmpty(query.getStartTime()) || ObjectUtil.isEmpty(query.getEndTime())) {
+//            return Result.error("开仓时间为必填项");
+//        }
         PageResult<FollowOrderDetailVO> followOrderDetailVOPageResult = followTraderService.orderSlipDetail(query);
-        //查看券商和服务器
-        followOrderDetailVOPageResult.getList().parallelStream().forEach(o->{
-            FollowPlatformEntity followPlatform = followPlatformService.getById(followTraderService.getById(o.getTraderId()).getPlatformId());
-            o.setBrokeName(followPlatform.getBrokerName());
-            o.setPlatform(followPlatform.getServer());
-        });
         detailService.export(followOrderDetailVOPageResult.getList());
+        return Result.ok();
     }
 
     @GetMapping("stopOrder")
     @Operation(summary = "停止下单/平仓")
+    @OperateLog(type = OperateTypeEnum.UPDATE)
     @PreAuthorize("hasAuthority('mascontrol:trader')")
     public Result<Boolean> stopOrder(@Parameter(description = "type") Integer type, @Parameter(description = "traderId") String traderId) {
         Boolean result = followTraderService.stopOrder(type, traderId);
-        if (!result){
+        if (!result) {
             FollowTraderEntity followTraderEntity = followTraderService.getById(traderId);
-            return Result.error(followTraderEntity.getAccount()+"暂无进行中平仓操作");
+            return Result.error(followTraderEntity.getAccount() + "暂无进行中下单/平仓操作");
         }
         return Result.ok();
     }
@@ -393,61 +634,196 @@ public class FollowTraderController {
     @Operation(summary = "重连账号")
     @PreAuthorize("hasAuthority('mascontrol:trader')")
     public Result<Boolean> reconnection(@Parameter(description = "traderId") String traderId) {
-        try{
-            FollowTraderEntity followTraderEntity = followTraderService.getById(traderId);
-            ConCodeEnum conCodeEnum = leaderApiTradersAdmin.addTrader(followTraderService.getById(traderId));
-            LeaderApiTrader leaderApiTrader = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(traderId);
-            if (conCodeEnum != ConCodeEnum.SUCCESS && !followTraderEntity.getStatus().equals(TraderStatusEnum.ERROR.getValue())) {
-                followTraderEntity.setStatus(TraderStatusEnum.ERROR.getValue());
-                followTraderService.updateById(followTraderEntity);
-                log.error("喊单者:[{}-{}-{}]重连失败，请校验", followTraderEntity.getId(), followTraderEntity.getAccount(), followTraderEntity.getServerName());
-                throw new ServerException("重连失败");
-            } else {
-                log.info("喊单者:[{}-{}-{}-{}]在[{}:{}]重连成功", followTraderEntity.getId(), followTraderEntity.getAccount(), followTraderEntity.getServerName(), followTraderEntity.getPassword(), leaderApiTrader.quoteClient.Host, leaderApiTrader.quoteClient.Port);
-                leaderApiTrader.startTrade();
-            }
-        }catch (RuntimeException e){
+        Boolean reconnect = reconnect(traderId);
+        if (!reconnect){
             throw new ServerException("请检查账号密码，稍后再试");
         }
         return Result.ok();
     }
-
-    @GetMapping("traderSymbol")
-    @Operation(summary = "获取对应Symbol")
-    @PreAuthorize("hasAuthority('mascontrol:trader')")
-    public Result<String>  traderSymbol(@Parameter(description = "symbol") String symbol, @Parameter(description = "traderId") Long traderId) {
-        String symbol1 = getSymbol(traderId, symbol);
-        return  Result.ok(symbol1);
+    @GetMapping("/specificationList")
+    @Operation(summary = "品种规格列表")
+    public Result<PageResult<FollowSysmbolSpecificationVO>> page(@ParameterObject @Valid FollowSysmbolSpecificationQuery query) {
+        PageResult<FollowSysmbolSpecificationVO> page = followSysmbolSpecificationService.page(query);
+        return Result.ok(page);
     }
 
-    private String getSymbol(Long traderId,String symbol){
-        FollowTraderVO followTraderVO = followTraderService.get(traderId);
-        //查询平台信息
-        FollowPlatformEntity followPlatform = followPlatformService.getById(followTraderVO.getPlatformId());
-        //获取symbol信息
-        List<FollowSysmbolSpecificationEntity> followSysmbolSpecificationEntityList;
-        if (ObjectUtil.isNotEmpty(redisCache.get(Constant.SYMBOL_SPECIFICATION + traderId))){
-            followSysmbolSpecificationEntityList = (List<FollowSysmbolSpecificationEntity>)redisCache.get(Constant.SYMBOL_SPECIFICATION + traderId);
-        }else {
-            //查询改账号的品种规格
-            followSysmbolSpecificationEntityList = followSysmbolSpecificationService.list(new LambdaQueryWrapper<FollowSysmbolSpecificationEntity>().eq(FollowSysmbolSpecificationEntity::getTraderId, traderId));
-            redisCache.set(Constant.SYMBOL_SPECIFICATION+traderId,followSysmbolSpecificationEntityList);
+    private Boolean reconnect(String traderId) {
+        Boolean result=false;
+        try {
+            FollowTraderEntity followTraderEntity = followTraderService.getById(traderId);
+            if (followTraderEntity.getType().equals(TraderTypeEnum.MASTER_REAL.getType())){
+                leaderApiTradersAdmin.removeTrader(traderId);
+                ConCodeEnum conCodeEnum = leaderApiTradersAdmin.addTrader(followTraderService.getById(traderId));
+                if (conCodeEnum != ConCodeEnum.SUCCESS&&conCodeEnum != ConCodeEnum.AGAIN) {
+                    followTraderEntity.setStatus(TraderStatusEnum.ERROR.getValue());
+                    followTraderService.updateById(followTraderEntity);
+                    log.error("喊单者:[{}-{}-{}]重连失败，请校验", followTraderEntity.getId(), followTraderEntity.getAccount(), followTraderEntity.getServerName());
+                    throw new ServerException("重连失败");
+                }  else if (conCodeEnum == ConCodeEnum.AGAIN){
+                    long maxWaitTimeMillis = 10000; // 最多等待10秒
+                    long startTime = System.currentTimeMillis();
+                    LeaderApiTrader leaderApiTrader = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(traderId);
+                    // 开始等待直到获取到copierApiTrader1
+                    while (leaderApiTrader == null && (System.currentTimeMillis() - startTime) < maxWaitTimeMillis) {
+                        try {
+                            // 每次自旋等待500ms后再检查
+                            Thread.sleep(500);
+                        } catch (InterruptedException e) {
+                            // 处理中断
+                            Thread.currentThread().interrupt();
+                            break;
+                        }
+                        leaderApiTrader = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(traderId);
+                    }
+                    //重复提交
+                    if (ObjectUtil.isNotEmpty(leaderApiTrader)){
+                        log.info(traderId+"重复提交并等待完成");
+                    }else {
+                        log.info(traderId+"重复提交并等待失败");
+                    }
+                    result=true;
+                } else {
+                    LeaderApiTrader leaderApiTrader = leaderApiTradersAdmin.getLeader4ApiTraderConcurrentHashMap().get(traderId);
+                    log.info("喊单者:[{}-{}-{}-{}]在[{}:{}]重连成功", followTraderEntity.getId(), followTraderEntity.getAccount(), followTraderEntity.getServerName(), followTraderEntity.getPassword(), leaderApiTrader.quoteClient.Host, leaderApiTrader.quoteClient.Port);
+                    leaderApiTrader.startTrade();
+                    result=true;
+                }
+            }else {
+                copierApiTradersAdmin.removeTrader(traderId);
+                ConCodeEnum conCodeEnum = copierApiTradersAdmin.addTrader(followTraderService.getById(traderId));
+                if (conCodeEnum != ConCodeEnum.SUCCESS&&conCodeEnum != ConCodeEnum.AGAIN) {
+                    followTraderEntity.setStatus(TraderStatusEnum.ERROR.getValue());
+                    followTraderService.updateById(followTraderEntity);
+                    log.error("跟单者:[{}-{}-{}]重连失败，请校验", followTraderEntity.getId(), followTraderEntity.getAccount(), followTraderEntity.getServerName());
+                    throw new ServerException("重连失败");
+                } else if (conCodeEnum == ConCodeEnum.AGAIN){
+                    long maxWaitTimeMillis = 10000; // 最多等待10秒
+                    long startTime = System.currentTimeMillis();
+                    CopierApiTrader copierApiTrader = copierApiTradersAdmin.getCopier4ApiTraderConcurrentHashMap().get(traderId);
+                    // 开始等待直到获取到copierApiTrader1
+                    while (copierApiTrader == null && (System.currentTimeMillis() - startTime) < maxWaitTimeMillis) {
+                        try {
+                            // 每次自旋等待500ms后再检查
+                            Thread.sleep(500);
+                        } catch (InterruptedException e) {
+                            // 处理中断
+                            Thread.currentThread().interrupt();
+                            break;
+                        }
+                        copierApiTrader = copierApiTradersAdmin.getCopier4ApiTraderConcurrentHashMap().get(traderId);
+                    }
+                    //重复提交
+                    if (ObjectUtil.isNotEmpty(copierApiTrader)){
+                        log.info(traderId+"重复提交并等待完成");
+                        result=true;
+                    }else {
+                        log.info(traderId+"重复提交并等待失败");
+                    }
+                }  else {
+                    CopierApiTrader copierApiTrader = copierApiTradersAdmin.getCopier4ApiTraderConcurrentHashMap().get(traderId);
+                    log.info("跟单者:[{}-{}-{}-{}]在[{}:{}]重连成功", followTraderEntity.getId(), followTraderEntity.getAccount(), followTraderEntity.getServerName(), followTraderEntity.getPassword(), copierApiTrader.quoteClient.Host, copierApiTrader.quoteClient.Port);
+                    copierApiTrader.startTrade();
+                    result=true;
+                }
+            }
+        }catch (Exception e){
+            log.info("重连错误"+e.getMessage());
+            result=false;
         }
+        return result;
+    }
 
-        if (ObjectUtil.isNotEmpty(symbol)){
-            //查看品种列表
-            List<FollowVarietyEntity> list = followVarietyService.list(new LambdaQueryWrapper<FollowVarietyEntity>().eq(FollowVarietyEntity::getBrokerName, followPlatform.getBrokerName()).eq(FollowVarietyEntity::getStdSymbol, symbol));
-            for (FollowVarietyEntity o:list){
-                if (ObjectUtil.isNotEmpty(o.getBrokerSymbol())){
-                    //查看品种规格
-                    Optional<FollowSysmbolSpecificationEntity> specificationEntity = followSysmbolSpecificationEntityList.stream().filter(fl -> ObjectUtil.equals(o.getBrokerSymbol(), fl.getSymbol())).findFirst();
-                    if (specificationEntity.isPresent()){
-                        return o.getBrokerSymbol();
+//    @GetMapping("traderSymbol")
+//    @Operation(summary = "获取对应Symbol")
+//    @PreAuthorize("hasAuthority('mascontrol:trader')")
+//    public Result<String> traderSymbol(@Parameter(description = "symbol") String symbol, @Parameter(description = "traderId") Long traderId) {
+//        String symbol1 = getSymbol(traderId, symbol);
+//        return Result.ok(symbol1);
+//    }
+
+    @GetMapping("orderCloseList")
+    @Operation(summary = "平仓列表")
+    @PreAuthorize("hasAuthority('mascontrol:trader')")
+    public Result<PageResult<FollowOrderCloseVO>> orderSendList(@ParameterObject @Valid FollowOrderCloseQuery query) {
+        PageResult<FollowOrderCloseVO> page = followOrderCloseService.page(query);
+        return Result.ok(page);
+    }
+
+    private void  checkParams(FollowOrderSendCloseVO vo){
+//        if (vo.getNum()==null && vo.getFlag().equals( TraderRepairEnum.SEND.getType())) {
+//            throw new ServerException("总单数最少一单");
+//        }
+        if(ObjectUtil.isEmpty(vo.getSymbol()) && vo.getFlag().equals( CloseOrOpenEnum.CLOSE.getValue())){
+            throw  new ServerException("品种不能为空");
+        }
+        if(ObjectUtil.isEmpty(vo.getType()) && vo.getFlag().equals( CloseOrOpenEnum.CLOSE.getValue())){
+            throw  new ServerException("订单方向不能为空");
+        }
+        if(ObjectUtil.isEmpty(vo.getFlag())){
+            throw  new ServerException("是否全平不能为空");
+        }
+    }
+
+    private String getSymbol(QuoteClient quoteClient,Long traderId, String symbol) {
+
+        //查询平台信息
+        FollowPlatformEntity followPlatform = followPlatformService.getPlatFormById(followTraderService.getFollowById(traderId).getPlatformId().toString());
+        //获取symbol信息
+        List<FollowSysmbolSpecificationEntity> specificationServiceByTraderId = followSysmbolSpecificationService.getByTraderId(traderId);
+
+        FollowTraderEntity followTraderEntity = followTraderService.getById(traderId);
+        if (ObjectUtil.isNotEmpty(symbol)) {
+            // 先查品种规格
+            List<FollowSysmbolSpecificationEntity> specificationEntity = specificationServiceByTraderId.stream().filter(item -> item.getSymbol().contains(symbol)).toList();
+            if (ObjectUtil.isNotEmpty(specificationEntity)){
+                for (FollowSysmbolSpecificationEntity o : specificationEntity) {
+                    log.info("品种规格获取报价"+o.getSymbol());
+                    //获取报价
+                    QuoteEventArgs eventArgs= getEventArgs(quoteClient,o.getSymbol());
+                    if (ObjectUtil.isNotEmpty(eventArgs)) {
+                        return o.getSymbol();
+                    }
+                };
+            }else {
+                // 查看品种匹配 模板
+                List<FollowVarietyEntity> followVarietyEntityList = followVarietyService.getListByTemplated(followTraderEntity.getTemplateId());
+                List<FollowVarietyEntity> list = followVarietyEntityList.stream().filter(o ->ObjectUtil.isNotEmpty(o.getBrokerName())&& o.getBrokerName().equals(followPlatform.getBrokerName()) && o.getStdSymbol().equals(symbol)).toList();
+                QuoteEventArgs eventArgs;
+                for (FollowVarietyEntity o : list) {
+                    if (ObjectUtil.isNotEmpty(o.getBrokerSymbol())) {
+                        //获取报价
+                        eventArgs= getEventArgs(quoteClient,o.getBrokerSymbol());
+                        if (ObjectUtil.isNotEmpty(eventArgs)){
+                            return o.getBrokerSymbol();
+                        }
                     }
                 }
             }
         }
         return symbol;
+    }
+
+    private QuoteEventArgs getEventArgs(QuoteClient quoteClient,String symbol){
+        QuoteEventArgs eventArgs = null;
+        try {
+            if (ObjectUtil.isEmpty(quoteClient.GetQuote(symbol))){
+                //订阅
+                quoteClient.Subscribe(symbol);
+            }
+            while (eventArgs==null && quoteClient.Connected()) {
+                try {
+                    Thread.sleep(50);
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
+                }
+                eventArgs=quoteClient.GetQuote(symbol);
+            }
+            eventArgs = quoteClient.GetQuote(symbol);
+            return eventArgs;
+        }catch (InvalidSymbolException | TimeoutException | ConnectException e) {
+            log.info("获取报价失败,品种不正确,请先配置品种");
+            return eventArgs;
+        }
     }
 
     private double getQuoteOrRetry(QuoteClient quoteClient, String symbol) throws InvalidSymbolException, TimeoutException, ConnectException, InterruptedException {
@@ -481,4 +857,54 @@ public class FollowTraderController {
         }
         return ask;
     }
+
+    @PostMapping("reconnectionServer")
+    @Operation(summary = "重连服务器账号")
+    @PreAuthorize("hasAuthority('mascontrol:speed')")
+    public Result<Map<String, Boolean>> reconnectionServer(@RequestBody String severName) {
+        // 查询serverName中的所有信息
+        List<FollowTraderEntity> list = followTraderService.listByServerName(severName);
+        log.info("查询到serverName为{}的账号数为{}", severName, list.size());
+        Map<String, Boolean> reconnectResults = new HashMap<>();
+
+        for (FollowTraderEntity followTraderEntity : list) {
+            String traderId = followTraderEntity.getId().toString();
+            Boolean reconnect = reconnect(traderId);
+            reconnectResults.put(traderId, reconnect);
+        }
+
+        return Result.ok(reconnectResults);
+    }
+
+    @PostMapping("test")
+    @Operation(summary = "手动定时测速任务")
+    @PreAuthorize("hasAuthority('mascontrol:speed')")
+    public Result<String> test() throws IOException {
+        speedTestTask.weeklySpeedTest();
+        return Result.ok("手动测速成功");
+    }
+
+    @PostMapping("/synchData/{traderId}")
+    @Operation(summary = "同步数据")
+    public Result<String> synchData(@PathVariable("traderId") Long traderId) throws IOException {
+        if(traderId==null){
+            throw new ServerException("账号id不能为空");
+        }
+        FollowTraderEntity traderEntity = followTraderService.getById(traderId);
+        if(traderEntity==null){
+            throw new ServerException("账号id不存在");
+        }
+        List<FollowTraderEntity> newList = new ArrayList<>();
+        obtainOrderHistoryTask.update(traderEntity,newList);
+        return Result.ok("同步成功");
+    }
+
+    @GetMapping("sendAccountList")
+    @Operation(summary = "下单账号列表")
+    @PreAuthorize("hasAuthority('mascontrol:trader')")
+    public Result<List<FollowSendAccountListVO>> sendAccountList() {
+        List<FollowSendAccountListVO> page = followTraderService.accountPage();
+        return Result.ok(page);
+    }
+
 }
